# VETS

./: .gitignore  README.md
godot/: GUI.gd  Godot_v4.2.1-stable_win64_console.exe - Shortcut.lnk  boot.png.import  box.tscn  box_open.tscn  desat.gdshader  export_presets.cfg  icon.png.import  main.tscn  panel_translation_packet.tres  project.godot  rust.gdextension  translating_text.tscn  translation_packet.tscn
godot/menu/font/: BIZUDMincho-Bold.ttf.import  BIZUDMincho-Regular.ttf.import  DotGothic16-Regular.ttf.import  ShipporiMincho-Regular.ttf.import
godot/menu/graphic/: dualsense.png.import  placeholder.png.import  vignette.png.import  vignette_h.png.import
godot/menu/sprite/: box_close.png.import  box_open.png.import  camera.png.import  key_x.png.import  key_x_pressed.png.import  mouse_cursor.png.import  mouse_cursor_2.png.import  mouse_cursor_3.png.import  panel_packet.png.import  refresh.png.import  save.png.import
rust/: Cargo.toml  build.rs
rust/src/: gui.rs  lib.rs  system.rs
