[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
bindgen = "0.69.2"

[dependencies]
base64 = "0.21.7"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["experimental-godot-api"] }
image = "0.24.8"
kakasi = "0.1.0"
reqwest = { version = "0.11.23", features = ["json"] }
scrap = "0.5.0"
serde = "1.0.195"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
